--- a/index.html
+++ b/index.html
@@ -1,17 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Images Slideshow</title>
 
     <!---=== Font Awesome CDN ===-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!---=== CSS ===-->
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!--=== CSS ===-->
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- Link Swiper's CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
+    />
+
+  </head>
+  <body>
+    <section>
+      <div class="container swiper mySwiper">
+        <!-- <div class="content"> -->
+
+        <div class="card swiper-wrapper">
+          <!-- <div class="card-content"> -->
+          <div class="image swiper-slide">
+            <img src="images/1.jpg" alt="" />
+          </div>
+
+          <div class="image swiper-slide">
+            <img src="images/2.jpg" alt="" />
+          </div>
+
+          <!-- </div> -->
+        </div>
+        <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-pagination"></div>
+<!-- 
+        <div style="text-align: center">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+          </div> -->
+          
+        <!-- <div class="card slides">
+            <div class="card-content">
+              <div class="image">
+                <img src="images/2.jpg" alt="" />
+              </div>
+            </div>
+          </div> -->
+
+        <!-- </div> -->
+      </div>
+    </section>
+
+    <!-- === Script ===
+    <script src="script.js"></script> -->
+
+     <!-- Swiper JS -->
+     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+
+     <!-- Initialize Swiper -->
+     <script src="script.js"></script>
+
+  </body>
 </html>
