--- a/index.html
+++ b/index.html
@@ -39,6 +39,30 @@
             <img src="images/2.jpg" alt="" />
           </div>
 
+          <div class="image swiper-slide">
+            <img src="images/3.jpg" alt="" />
+          </div>
+
+          <div class="image swiper-slide">
+            <img src="images/4.jpg" alt="" />
+          </div>
+
+          <div class="image swiper-slide">
+            <img src="images/5.jpg" alt="" />
+          </div>
+
+          <div class="image swiper-slide">
+            <img src="images/6.jpg" alt="" />
+          </div>
+          <div class="image swiper-slide">
+            <img src="images/7.jpg" alt="" />
+          </div>
+          <div class="image swiper-slide">
+            <img src="images/8.jpg" alt="" />
+          </div>
+          <div class="image swiper-slide">
+            <img src="images/9.jpg" alt="" />
+          </div>
           <!-- </div> -->
         </div>
         <div class="swiper-button-next"></div>
